fixed warnings in src/main/java
- <?>
- unused variable
- getConstructor().newInstance()
- WebSocketUpgradeFilter.configure()